Upgrading Java, Gradle, Build Plugins, and Dependencies.